Integrated Objenesis. It is used to instantiate enums instead of reflection-based approach