@@ -30,12 +30,7 @@ repositories {
 dependencies {
     compile('javax.persistence:javax.persistence-api:2.2')
     compile('org.apache.commons:commons-lang3:3.11')
+    compile('org.objenesis:objenesis:3.2')
     compile('org.springframework:spring-aop:5.2.8.RELEASE')
     testCompile('junit:junit:4.12')
-}
-
-test {
-    if (!JavaVersion.current().isJava8()) {
-        jvmArgs "--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED"
-    }
 }
